# src/routes/authRoutes.js
@@ -6,6 +6,7 @@ const router = express.Router();
 
 router.post('/register', authController.register);
 router.post('/login', authController.login);
-router.put('/update-me', authenticateToken, authController.update);
+router.put('/user', authenticateToken, authController.update);
+router.delete('/user', authenticateToken, authController.delete);
 router.post('/update-pass', authenticateToken, authController.updatePass);
 module.exports = router;
